cache-aside-flask-postgres-redis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache-aside-flask-postgres-redis
