cache-aside-flask-postgres-redis/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: cache-aside-flask-postgres-redis
  labels:
    app.kubernetes.io/part-of: cache-aside-flask-postgres-redis
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        app.kubernetes.io/part-of: cache-aside-flask-postgres-redis
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: cache-aside-flask-postgres-redis
  labels:
    app.kubernetes.io/part-of: cache-aside-flask-postgres-redis
    app.kubernetes.io/component: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
