cache-aside-flask-postgres-redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: cache-aside-flask-postgres-redis
  labels:
    app.kubernetes.io/part-of: cache-aside-flask-postgres-redis
    app.kubernetes.io/component: backend
spec:
  rules:
    - host: cache-aside-flask-postgres-redis.greencap.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
